<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <com.admiral.uikit.layout.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.admiral.uikit.components.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="Currency"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnCurrencyDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x6"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/standardTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="Default"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/standardTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnCurrencyIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/logoTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="Icons"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/logoTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnCurrencyFlags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/informerTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="Flags"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/informerTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnCurrencyIconsFlags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">

            <com.admiral.uikit.components.cell.unit.TextCellUnit
                android:id="@+id/outlineTabText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="leadingText"
                app:admiralText="@string/currency_icons_flags_title"
                app:admiralTextStyle="body1" />

            <com.admiral.uikit.components.cell.unit.IconCellUnit
                android:id="@+id/outlineTabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

    </com.admiral.uikit.layout.LinearLayout>

</ScrollView>
