...

        <com.admiral.uikit.components.tabs.StandardTabs
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x6"
            app:checkedId="@id/tabOutline">

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/tabOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icons_search_outline_tab" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/tabSolid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icons_search_solid_tab" />

        </com.admiral.uikit.components.tabs.StandardTabs>

...
