...
            app:admiralCellUnitType="trailing"
            app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

    </com.admiral.uikit.components.cell.BaseCell>

    <com.admiral.uikit.components.cell.BaseCell
        android:id="@+id/faqButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/module_x4"
        android:paddingEnd="@dimen/module_x4"
...
